# void-numerics

./: .gitattributes  Benchmarks.md  CMakeLists.txt  CMakePresets.json  README.md  ReadMe.md  changes.txt
.github/workflows/: Construct-Vcpkg-Info.yml  Sanitizers.yml  unit-tests.yml
2/: Linux-Clang-str-to-int-leading-zeros.md  Linux-GNU-int-to-str.md  Macos-Clang-str-to-int-leading-zeros.md  Macos-GNU-int-to-str.md
Benchmarks/: Index.md  Linux-Clang-int-to-str.md  Linux-Clang-str-to-int.md  Linux-GNU-str-to-int-leading-zeros.md  Linux-GNU-str-to-int.md  Macos-Clang-int-to-str.md  Macos-Clang-str-to-int.md  Macos-GNU-str-to-int-leading-zeros.md  Macos-GNU-str-to-int.md  Windows-MSVC-int-to-str.md  Windows-MSVC-str-to-int-leading-zeros.md  Windows-MSVC-str-to-int.md
benchmarks/: Index.md  Linux-Clang-int-to-str.md  Linux-Clang-str-to-int-leading-zeros.md  Linux-Clang-str-to-int.md  Linux-GNU-int-to-str.md  Linux-GNU-str-to-int-leading-zeros.md  Linux-GNU-str-to-int.md  Macos-Clang-int-to-str.md  Macos-Clang-str-to-int-leading-zeros.md  Macos-Clang-str-to-int.md  Macos-GNU-int-to-str.md  Macos-GNU-str-to-int-leading-zeros.md  Macos-GNU-str-to-int.md  Windows-MSVC-int-to-str.md  Windows-MSVC-str-to-int-leading-zeros.md  Windows-MSVC-str-to-int.md
benchmarks/csv/: Linux-Clang-int-to-str.csv  Linux-Clang-str-to-int-leading-zeros.csv  Linux-Clang-str-to-int.csv  Linux-GNU-int-to-str.csv  Linux-GNU-str-to-int-leading-zeros.csv  Linux-GNU-str-to-int.csv  Macos-Clang-int-to-str.csv  Macos-Clang-str-to-int-leading-zeros.csv  Macos-Clang-str-to-int.csv  Macos-GNU-int-to-str.csv  Macos-GNU-str-to-int-leading-zeros.csv  Macos-GNU-str-to-int.csv  Windows-MSVC-int-to-str.csv  Windows-MSVC-str-to-int-leading-zeros.csv  Windows-MSVC-str-to-int.csv
build_tools/: composer.json  make_vcpkg.php
build_tools/classes/packager/: Vcpkg.php
cmake/: common_options.cmake  installation_setup.cmake  library_setup.cmake  void-numericsConfig.cmake.in
include/vn-incl/: config.hpp  d_to_str.hpp  i_to_str.hpp  str_to_d.hpp  str_to_i.hpp  utility.hpp
src/benchmarks/: CMakeLists.txt  i_to_str.hpp  str_to_i.hpp  utility.hpp  void-numerics.cpp
src/unit-tests/: CMakeLists.txt  i_to_str.hpp  str_to_i.hpp  test_macros.hpp  void-numerics.cpp
unit-tests/: CMakeLists.txt  charconv_test_helpers.hpp  i_to_str.hpp  llvm_to_chars.hpp  main.cpp  test_macros.hpp
vcpkg/ports/void-numerics/: portfile.cmake  vcpkg.json
vcpkg/ports/void_numerics/: portfile.cmake  vcpkg.json
vcpkg/versions/v-/: void-numerics.json
